# BinStatus

./: CMakeLists.txt  bin.mjs  partitions.csv  sdkconfig
main/: CMakeLists.txt  adc.cpp  adc.h  config.h  display.cpp  display.h  idf_component.yml  images.cpp  images.h  main.cpp  sensor.cpp  sensor.h
main/ext/: adc.cpp  adc.h  display.cpp  display.h  epaper.cpp  epaper.h  estructs.h
main/zigbee/: core.cpp  core.h  endpoint.h  handlers.cpp  handlers.h
